# m3m3x

./: README.md  pyproject.toml
memex/: __init__.py  cli.py
memex/scripts/: base2img.py  clean.py  init.py  new.py  taxa.py  yfm.py
memex/utils/: __init__.py  date.py  docstring.py  load.py  log_setup.py  logutils.py  path.py  symbols.py  text.py  title.py  yaml_tools.py
